force-app/main/default/objects/Project__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <label>Amount</label>
    <summarizedField>Project_Product__c.Amount__c</summarizedField>
    <summaryForeignKey>Project_Product__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>