force-app/main/default/objects/Project__c/fields/Completed_Hours__c.field-meta.xml
<CustomField>
    <fullName>Completed_Hours__c</fullName>
    <label>Completed Hours</label>
    <summarizedField>Project_Product__c.Completed_Hours__c</summarizedField>
    <summaryForeignKey>Project_Product__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>