force-app/main/default/objects/Project__c/fields/Economic_Status__c.field-meta.xml
<CustomField>
    <fullName>Economic_Status__c</fullName>
    <formula>IF(Amount__c = Cost__c, &apos;Profit&apos;, &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Economic Status</label>
    <type>Text</type>
</CustomField>