force-app/main/default/objects/Project__c/fields/Start_Today__c.field-meta.xml
<CustomField>
    <fullName>Start_Today__c</fullName>
    <formula>Start_Date__c &lt;= TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start Today</label>
    <type>Checkbox</type>
</CustomField>