force-app/main/default/objects/Project__c/fields/Total_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Hours__c</fullName>
    <label>Total Hours</label>
    <summarizedField>Project_Product__c.Quantity__c</summarizedField>
    <summaryForeignKey>Project_Product__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>