force-app/main/default/objects/Project__c/fields/Validation_Hours__c.field-meta.xml
<CustomField>
    <fullName>Validation_Hours__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Validation Hours</label>
    <type>Checkbox</type>
</CustomField>