force-app/main/default/objects/Project__c/fields/Validation_Profit__c.field-meta.xml
<CustomField>
    <fullName>Validation_Profit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Validation Profit</label>
    <type>Checkbox</type>
</CustomField>