force-app/main/default/objects/Project__c/fields/Validation_Project_Task__c.field-meta.xml
<CustomField>
    <fullName>Validation_Project_Task__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Validation Project Task</label>
    <type>Checkbox</type>
</CustomField>