force-app/main/default/objects/Project__c/fields/Validation_Squad_Lead__c.field-meta.xml
<CustomField>
    <fullName>Validation_Squad_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Validation Squad Lead</label>
    <type>Checkbox</type>
</CustomField>