force-app/main/default/objects/Project__c/fields/Validation_Status__c.field-meta.xml
<CustomField>
    <fullName>Validation_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Validation Status</label>
    <type>Checkbox</type>
</CustomField>