force-app/main/default/objects/Project__c/fields/Validation_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Validation_Tasks__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Validation Tasks</label>
    <type>Checkbox</type>
</CustomField>