force-app/main/default/objects/Project__c/validationRules/AvoidChanges.validationRule-meta.xml
<ValidationRule>
    <fullName>AvoidChanges</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Status__c, &quot;In Progress&quot;),

     OR(
        ISCHANGED( Opportunity__c ),
        ISCHANGED( Client__c ),
        ISCHANGED( Close_Date__c ),
        ISCHANGED( Start_Date__c ),
        ISCHANGED( Project_Manager__c ),
        ISCHANGED( Squad_Lead__c ),
        ISCHANGED( Amount__c )
        )
)</errorConditionFormula>
    <errorMessage>You can&apos;t make changes while the project is in progress.</errorMessage>
</ValidationRule>