force-app/main/default/objects/Project__c/validationRules/Error_no_Tasks.validationRule-meta.xml
<ValidationRule>
    <fullName>Error_no_Tasks</fullName>
    <active>true</active>
    <errorConditionFormula>Validation_Project_Task__c</errorConditionFormula>
    <errorMessage>There are no tasks assigned for this project.</errorMessage>
</ValidationRule>