force-app/main/default/objects/Project__c/validationRules/Error_Tasks.validationRule-meta.xml
<ValidationRule>
    <fullName>Error_Tasks</fullName>
    <active>true</active>
    <errorConditionFormula>Validation_Tasks__c</errorConditionFormula>
    <errorMessage>There&apos;s still tasks pending</errorMessage>
</ValidationRule>